fix; invoice card not showing on tablet mode

--- a/src/app/pages/invoice-list/invoice-list.component.scss
+++ b/src/app/pages/invoice-list/invoice-list.component.scss
@@ -200,7 +200,7 @@
       @include button-reset;
     }
 
-    @include respond-below($breakpoint-md) {
+    @include respond-below($breakpoint-sm) {
       display: none;
     }
   }
